--- a/index.html
+++ b/index.html
@@ -11,17 +11,27 @@
     <div id="app" x-data="d4data" class="container">
         <h1>Diablo4 Loot Filter File Builder</h1>
         <p class="action">
-            <button class="btn btn-warning btn-sm" @click="clearItems()">Clear</button>
+            <button class="btn btn-warning btn-sm" @click="clearItems()">Clear all</button>
         </p>
+        <hr>
         <div>
-            <textarea cols="30" rows="10" class="form-control" x-text="contentFile()"></textarea>
+            <h4>Content File :
+                <button type="button" class="btn btn-sm" @click="showContentFile = !showContentFile" x-text="showContentFile ? '⏫' : '⏬'"></button>
+            </h4>
+            <div x-show="showContentFile" class="text-end">
+                <button type="button" class="btn btn-info" @click="copyContentFile()">Copy</button>
+                <textarea cols="30" rows="10" class="form-control" x-text="contentFile()"></textarea>
+            </div>
         </div>
-        <h1>Affixes :</h1>
-        <p>
-            <button class="btn btn-primary" @click="addNewItem()">Add New Item</button>
-        </p>
-        <div class="row">
-            <template x-for="(item, key) in myList" x-key="JSON.stringify(item)">
+        <hr>
+        <h4>Affixes :
+            <button type="button" class="btn btn-sm" x-text="showAffixes ? '⏫' : '⏬'" @click="showAffixes = !showAffixes"></button>
+        </h4>
+        <div class="row" x-show="showAffixes">
+            <p>
+                <button class="btn btn-primary" @click="addNewItem()">Add New Item</button>
+            </p>
+            <template x-for="(item, key) in myList.affixes" x-key="JSON.stringify(item)">
                 <div class="col-md-4 card">
                     <div class="card-body">
                         <div class="mb-1">
@@ -40,7 +50,7 @@
                         <template x-for="(affix, affixKey) in item.affixPools">
                             <div class="row">
                                 <div class="col-2 align-self-center">
-                                    <button class="btn btn-sm btn-danger" @click="removeAffix(key, affixKey)">X</button>
+                                    <button class="btn btn-sm" @click="removeAffix(key, affixKey)">⛔</button>
                                 </div>
                                 <div class="col-10">
                                     <div class="mb-1">
@@ -70,6 +80,15 @@
                         </div>
                     </div>
                 </div>
+            </template>
+        </div>
+        <hr>
+        <h4>Aspects :
+            <button type="button" class="btn btn-sm" x-html="showAspects ? '⏫' : '⏬'" @click="showAspects = !showAspects"></button>
+        </h4>
+        <div class="row" x-show="showAspects">
+            <template x-for="(item, key) in myList.aspects" x-key="JSON.stringify(item)">
+
             </template>
         </div>
     </div>
