--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </h4>
             <div x-show="showContentFile" class="text-end">
                 <button type="button" class="btn btn-info" @click="copyContentFile()">Copy</button>
-                <textarea cols="30" rows="10" class="form-control" x-text="contentFile()"></textarea>
+                <textarea cols="30" rows="3" class="form-control" x-text="contentFile()"></textarea>
             </div>
         </div>
         <hr>
@@ -86,9 +86,27 @@
         <h4>Aspects :
             <button type="button" class="btn btn-sm" x-html="showAspects ? '⏫' : '⏬'" @click="showAspects = !showAspects"></button>
         </h4>
-        <div class="row" x-show="showAspects">
+        <div class="row mb-5" x-show="showAspects">
+            <p>
+                <button class="btn btn-primary" @click="addAspect()">Add Aspect</button>
+            </p>
             <template x-for="(item, key) in myList.aspects" x-key="JSON.stringify(item)">
-
+                <div class="col-md-4 card">
+                    <div class="card-body">
+                        <div class="mb-1">
+                            <div class="input-group">
+                                <select name="form-control" placeholder="Choose an aspect" x-model="item.aspect" @change="saveList()">
+                                    <option data-placeholder="true"></option>
+                                    <template x-for="aspectListKey in Object.keys(aspects)">
+                                        <option :value="aspectListKey" x-text="aspectListKey + ' : ' + aspects[aspectListKey].desc" :selected="aspectListKey == item.aspect"></option>
+                                    </template>
+                                </select>
+                                <input type="text" x-model="item.value" class="form-control" placeholder="Aspect value" @change="saveList()" />
+                                <button class="btn btn-outline-secondary" type="button" @click="removeAspect(key)">⛔</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </template>
         </div>
     </div>
