--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 </div>
                             </div>
                         </template>
-                        <div class="mb-1 text-end" x-show="item.affixPools.length < 4">
+                        <div class="mb-1 text-end">
                             <button class="btn btn-info btn-sm" @click="addAffix(key)">Add Affix</button>
                         </div>
                         <div class="mb-1">
