--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="mb-1">
                             <input type="number" class="form-control form-control-sm" x-model="item.minPower" placeholder="Min Power" @change="saveList">
                         </div>
-                        <template x-for="(affix, affixKey) in item.affixPools">
+                        <template x-for="(affix, affixKey) in item.affixPools" x-key="JSON.stringify(item)">
                             <div class="row">
                                 <div class="col-2 align-self-center">
                                     <button class="btn btn-sm" @click="removeAffix(key, affixKey)">⛔</button>
