--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet"></link>
+    <style>
+        .ss-content .ss-list .ss-option {
+            font-size:0.9rem;
+            border-bottom:solid 1px var(--bs-warning-border-subtle);
+        }
+        .ss-content {
+            border-color: var(--bs-warning-border-subtle);
+            box-shadow: 0 0 3px 0px #CFCFCF;
+        }
+    </style>
 </head>
 <body>
     <div id="app" x-data="d4data" class="container">
@@ -123,24 +133,26 @@
             <p>
                 <button class="btn btn-primary" @click="addAspect()">Add Aspect</button>
             </p>
-            <template x-for="(item, key) in myList[activeBuild].aspects" x-key="JSON.stringify(item)">
-                <div class="col-md-4 card">
-                    <div class="card-body">
-                        <div class="mb-1">
-                            <div class="input-group">
-                                <select name="form-control" placeholder="Choose an aspect" x-model="item.aspect" @change="saveList()">
-                                    <option data-placeholder="true"></option>
-                                    <template x-for="aspectListKey in Object.keys(aspects)">
-                                        <option :value="aspectListKey" x-text="aspectListKey + ' : ' + aspects[aspectListKey].desc" :selected="aspectListKey == item.aspect"></option>
-                                    </template>
-                                </select>
-                                <input type="text" x-model="item.value" class="form-control" placeholder="Aspect value" @change="saveList()" />
-                                <button class="btn btn-outline-secondary" type="button" @click="removeAspect(key)">⛔</button>
+            <div class="row gy-2 gx-4">
+                <template x-for="(item, key) in myList[activeBuild].aspects" x-key="JSON.stringify(item)">
+                    <div class="col-md-4">
+                        <div class="border border-primary-subtle p-2 rounded">
+                            <div class="mb-1">
+                                <div class="input-group">
+                                    <select name="form-control" placeholder="Choose an aspect" x-model="item.aspect" @change="saveList()">
+                                        <option data-placeholder="true"></option>
+                                        <template x-for="aspectListKey in Object.keys(aspects)">
+                                            <option :value="aspectListKey" :data-html="'<strong>' + aspectListKey + '</strong> : ' + aspects[aspectListKey].desc" :selected="aspectListKey == item.aspect"></option>
+                                        </template>
+                                    </select>
+                                    <input type="number" x-model="item.value" class="form-control form-control-sm border-info-subtle" placeholder="Aspect value" @change="saveList()" />
+                                    <button class="btn btn-outline-secondary btn-sm" type="button" @click="removeAspect(key)">⛔</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </template>
+                </template>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
