--- a/index.html
+++ b/index.html
@@ -91,26 +91,24 @@
                             <input type="number" class="form-control form-control-sm border-info-subtle" x-model="item.minPower" placeholder="Min Power" @change="saveList">
                         </div>
                         <template x-for="(affix, affixKey) in item.affixPools" :key="affix.id">
-                            <div class="row">
-                                <div class="col-2 align-self-center">
-                                    <button class="btn btn-sm" @click="removeAffix(key, affixKey)">⛔</button>
+                            <div class="row mb-1">
+                                <div class="col-md-8">
+                                    <select placeholder="Choose an affix" x-model="item.affixPools[affixKey].affix" @change="saveList" class="border-warning-subtle">
+                                        <option data-placeholder="true"></option>
+                                        <template x-for="affixListKey in Object.keys(affixes)">
+                                            <option :value="affixListKey" x-text="affixes[affixListKey]" :selected="affixListKey == affix.affix"></option>
+                                        </template>
+                                    </select>
                                 </div>
-                                <div class="col-10">
-                                    <div class="mb-1">
-                                        <select placeholder="Choose an affix" x-model="item.affixPools[affixKey].affix" @change="saveList" class="border-warning-subtle">
-                                            <option data-placeholder="true"></option>
-                                            <template x-for="affixListKey in Object.keys(affixes)">
-                                                <option :value="affixListKey" x-text="affixes[affixListKey]" :selected="affixListKey == affix.affix"></option>
-                                            </template>
-                                        </select>
-                                    </div>
-                                    <div class="mb-1">
-                                        <input type="number" x-model="item.affixPools[affixKey].value" class="form-control form-control-sm border-warning-subtle" placeholder="Affix value" @keyup="saveList">
+                                <div class="col-md-4">
+                                    <div class="input-group input-group-sm">
+                                        <input type="number" x-model="item.affixPools[affixKey].value" class="form-control form-control-sm border-warning-subtle" placeholder="Value" @keyup="saveList">
+                                        <button class="btn btn-sm" @click="removeAffix(key, affixKey)">⛔</button>
                                     </div>
                                 </div>
                             </div>
                         </template>
-                        <div class="mb-1 text-end">
+                        <div class="text-end mb-1">
                             <button class="btn btn-info btn-sm" @click="addAffix(key)">Add Affix</button>
                         </div>
                         <div class="mb-1">
