--- a/index.html
+++ b/index.html
@@ -5,19 +5,34 @@
     <title>Diablo4 Loot Filter File Builder</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet"></link>
     <style>
-        .ss-content .ss-list .ss-option {
-            font-size:0.9rem;
-            border-bottom:solid 1px var(--bs-warning-border-subtle);
-        }
-        .ss-content {
-            border-color: var(--bs-warning-border-subtle);
-            box-shadow: 0 0 3px 0px #CFCFCF;
-        }
         .dropdown-menu {
             max-height: 200px;
             overflow-y: auto;
+        }
+        .dropdown-menu-aspect {
+            max-width: 45rem;
+        }
+        .dropdown-menu-aspect .dropdown-item {
+            white-space: normal;
+        }
+        .affix-value {
+            cursor: pointer;
+            max-width: 70%;
+            overflow: hidden;
+            white-space: normal;
+            width: 70%;
+        }
+        .dropdown-menu form {
+            position: sticky;
+            top:calc(var(--bs-dropdown-padding-y) * -1);
+            background: #FFF;
+        }
+        .pointer {
+            cursor: pointer;
+        }
+        .sticky-top {
+            box-shadow: 0px 4px 4px #3333330d;
         }
     </style>
 </head>
@@ -25,7 +40,7 @@
     <div id="app" x-data="d4data" class="container">
         <h1>Diablo4 Loot Filter File Builder</h1>
         <div class="row">
-            <div class="col-10">
+            <div class="col">
                 <div class="row">
                 <template x-for="(build, buildIndex) in myList" x-key="build.id">
                     <div class="col-2">
@@ -71,107 +86,126 @@
             </div>
         </div>
         <hr>
-        <h4>Affixes :
-            <button type="button" class="btn btn-sm" x-text="showAffixes ? '⏫' : '⏬'" @click="showAffixes = !showAffixes"></button>
-        </h4>
-        <p x-show="showAffixes">
-            <button class="btn btn-primary" @click="addNewItem()">Add New Item</button>
-        </p>
-        <div class="row gy-2 gx-4" x-show="showAffixes">
-            <template x-for="(item, key) in myList[activeBuild].affixes" :key="item.id">
-                <div class="col-md-4">
-                    <div class="border border-primary-subtle p-2 rounded">
-                        <div class="mb-1">
-                            <input type="text" x-model="item.name" class="form-control form-control-sm border-info-subtle" placeholder="Name" @keyup="saveList">
-                        </div>
-                        <div class="mb-1">
-                            <div class="input-group input-group-sm">
-                                <span class="input-group-text">
-                                    <template x-for="(itemType, itemTypeKey) in item.itemType">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-info" x-text="itemType"></button>
-                                            <button type="button" class="btn btn-sm btn-info" @click="item.itemType.splice(itemTypeKey, 1); saveList();">x</button>
-                                        </div>&nbsp;
-                                    </template>
-                                </span>
-                                <button class="btn btn-sm btn-outline-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside"> </button>
-                                <ul class="dropdown-menu">
-                                    <template x-for="itemType in itemTypes">
-                                        <li x-show="item.itemType.indexOf(itemType) == -1">
-                                            <a class="dropdown-item" :data-value="itemType" href="#" x-text="itemType" @click="item.itemType.push(itemType); saveList();"></a>
-                                        </li>
-                                    </template>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="mb-1">
-                            <input type="number" class="form-control form-control-sm border-info-subtle" x-model="item.minPower" placeholder="Min Power" @change="saveList">
-                        </div>
-                        <template x-for="(affix, affixKey) in item.affixPools" :key="affix.id">
-                            <div class="row mb-1">
-                                <div class="col-md-8">
-                                    <select placeholder="Choose an affix" x-model="item.affixPools[affixKey].affix" @change="saveList" class="border-warning-subtle">
-                                        <option data-placeholder="true"></option>
-                                        <template x-for="affixListKey in Object.keys(affixes)">
-                                            <option :value="affixListKey" x-text="affixes[affixListKey]" :selected="affixListKey == affix.affix"></option>
-                                        </template>
-                                    </select>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="input-group input-group-sm">
-                                        <input type="number" x-model="item.affixPools[affixKey].value" class="form-control form-control-sm border-warning-subtle" placeholder="Value" @keyup="saveList">
-                                        <button class="btn btn-sm" @click="removeAffix(key, affixKey)">⛔</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </template>
-                        <div class="text-end mb-1">
-                            <button class="btn btn-info btn-sm" @click="addAffix(key)">Add Affix</button>
-                        </div>
-                        <div class="mb-1">
-                            <input type="text" class="form-control form-control-sm border-info-subtle" placeholder="Minimum affix" x-model="item.minAffixCount">
-                        </div>
-                        <div class="mb-1">
-                            <button class="btn btn-info btn-danger btn-sm" @click="removeItem(key)">
-                                Remove
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </template>
-        </div>
-        <hr>
-        <h4>Aspects :
-            <button type="button" class="btn btn-sm" x-html="showAspects ? '⏫' : '⏬'" @click="showAspects = !showAspects"></button>
-        </h4>
-        <div class="row mb-5" x-show="showAspects">
-            <p>
-                <button class="btn btn-primary" @click="addAspect()">Add Aspect</button>
-            </p>
-            <div class="row gy-2 gx-4">
-                <template x-for="(item, key) in myList[activeBuild].aspects" x-key="JSON.stringify(item)">
+        <div class="affixes">
+            <div class="sticky-top pt-1 pb-1 bg-body mb-2">
+                <h4>Affixes :
+                <button type="button" class="btn btn-sm" x-text="showAffixes ? '⏫' : '⏬'" @click="showAffixes = !showAffixes"></button>
+            </h4>
+                <p x-show="showAffixes">
+                    <button class="btn btn-primary" @click="addNewItem()">Add New Item</button>
+                </p>
+            </div>
+            <div class="row gy-2 gx-4" x-show="showAffixes">
+                <template x-for="(item, key) in myList[activeBuild].affixes" :key="item.id">
                     <div class="col-md-4">
                         <div class="border border-primary-subtle p-2 rounded">
                             <div class="mb-1">
-                                <div class="input-group">
-                                    <select name="form-control" placeholder="Choose an aspect" x-model="item.aspect" @change="saveList()">
-                                        <option data-placeholder="true"></option>
-                                        <template x-for="aspectListKey in Object.keys(aspects)">
-                                            <option :value="aspectListKey" :data-html="'<strong>' + aspectListKey + '</strong> : ' + aspects[aspectListKey].desc" :selected="aspectListKey == item.aspect" x-text="aspectListKey + ' : ' + aspects[aspectListKey].desc"></option>
-                                        </template>
-                                    </select>
-                                    <input type="number" x-model="item.value" class="form-control form-control-sm border-info-subtle" placeholder="Aspect value" @change="saveList()" />
-                                    <button class="btn btn-outline-secondary btn-sm" type="button" @click="removeAspect(key)">⛔</button>
+                                <input type="text" x-model="item.name" class="form-control form-control-sm border-info-subtle" placeholder="Name" @keyup="saveList">
+                            </div>
+                            <div class="mb-1">
+                                <div class="border border-primary-subtle p-1 rounded pointer" @click="showDropdown(key, 'activeItemTypeDropdown')">
+                                    <template x-if="item.itemType <= 0">
+                                        <span>Choose one or multiple item type</span>
+                                    </template>
+                                    <template x-for="(itemType, itemTypeKey) in item.itemType">
+                                        <div class="btn-group btn-group-sm item-type m-1">
+                                            <button class="btn btn-sm btn-outline-primary" x-text="itemType"></button>
+                                            <button class="btn btn-sm btn-outline-primary remove" @click="item.itemType.splice(itemTypeKey, 1); saveList();">x</button>
+                                        </div>
+                                    </template>
                                 </div>
+                                <template x-if="activeItemTypeDropdown == key">
+                                    <ul class="dropdown-menu">
+                                        <template x-for="itemType in itemTypes">
+                                            <li x-show="item.itemType.indexOf(itemType) == -1">
+                                                <a class="dropdown-item" href="#" x-text="itemType" @click.prevent="item.itemType.push(itemType); saveList();"></a>
+                                            </li>
+                                        </template>
+                                    </ul>
+                                </template>
+                            </div>
+                            <div class="mb-1">
+                                <input type="number" class="form-control form-control-sm border-info-subtle" x-model="item.minPower" placeholder="Min Power" @change="saveList">
+                            </div>
+                            <template x-for="(affix, affixKey) in item.affixPools" :key="affix.id">
+                                <div class="mb-1">
+                                    <div class="input-group input-group-sm">
+                                        <span data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @click="showDropdown(key + '-' + affixKey, 'activeAffixDropdown')"></span>
+                                        <input type="number" class="form-control form-control-sm border-warning-subtle" x-model="affix.value" @keyup="saveList" placeholder="Value">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary border-warning-subtle" @click="removeAffix(key, affixKey)">⛔</button>
+                                        <template x-if="activeAffixDropdown == key + '-' + affixKey">
+                                            <div class="dropdown-menu">
+                                                <form>
+                                                    <div class="p-1">
+                                                        <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextAffixes" placeholder="Search an affix">
+                                                    </div>
+                                                </form>
+                                                <template x-for="affixKey in Object.keys(searchListAffixes())">
+                                                    <a :class="{ 'dropdown-item' : true, active : affixKey == affix.affix }" href="#" x-text="affixes[affixKey]" @click.prevent="affix.affix = affixKey; saveList();"></a>
+                                                </template>
+                                            </div>
+                                        </template>
+                                    </div>
+                                </div>
+                            </template>
+                            <div class="text-end mb-1">
+                                <button class="btn btn-info btn-sm" @click="addAffix(key)">Add Affix</button>
+                            </div>
+                            <div class="mb-1">
+                                <input type="number" class="form-control form-control-sm border-info-subtle" placeholder="Minimum affix" x-model="item.minAffixCount">
+                            </div>
+                            <div class="mb-1">
+                                <button class="btn btn-info btn-danger btn-sm" @click="removeItem(key)">
+                                    Remove
+                                </button>
                             </div>
                         </div>
                     </div>
                 </template>
             </div>
         </div>
+        <hr>
+        <div class="aspects">
+            <div class="sticky-top pt-1 pb-1 bg-body mb-2">
+                <h4>Aspects :
+                    <button type="button" class="btn btn-sm" x-html="showAspects ? '⏫' : '⏬'" @click="showAspects = !showAspects"></button>
+                </h4>
+                <p x-show="showAspects">
+                    <button class="btn btn-primary" @click="addAspect()">Add Aspect</button>
+                </p>
+            </div>
+            <div class="row mb-5" x-show="showAspects">
+                <div class="row gy-2 gx-4">
+                    <template x-for="(item, key) in myList[activeBuild].aspects" x-key="JSON.stringify(item)">
+                        <div class="col-md-4">
+                            <div class="border border-primary-subtle p-2 rounded">
+                                <div class="mb-1">
+                                    <div class="input-group">
+                                        <span :title="aspects[item.aspect]?.desc ?? 'Choose an aspect'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.aspect ? item.aspect : 'Choose an aspect'" @click="showDropdown(key, 'activeAspectDropdown')"></span>
+                                        <input type="number" x-model="item.value" class="form-control form-control-sm border-info-subtle" placeholder="Value" @change="saveList()" />
+                                        <button class="btn border-info-subtle btn-sm" type="button" @click="removeAspect(key)">⛔</button>
+                                        <template x-if="activeAspectDropdown == key">
+                                            <div class="dropdown-menu dropdown-menu-aspect">
+                                                <form>
+                                                    <div class="p-1">
+                                                        <input type="text" class="form-control form-control-sm border-info-subtle" x-model="searchTextAspects" placeholder="Search an aspect">
+                                                    </div>
+                                                </form>
+                                                <template x-for="aspectListKey in Object.keys(searchListAspects())">
+                                                    <a :class="{ 'dropdown-item' : true, active : aspectListKey == item.aspect }" href="#" x-html="'<strong>' + aspectListKey + '</strong> : ' + aspects[aspectListKey].desc" @click.prevent="item.aspect = aspectListKey; saveList();"></a>
+                                                </template>
+                                            </div>
+                                        </template>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </template>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/slim-select@latest/dist/slimselect.min.js"></script>
-    <script src="app.js"></script>
+    <script src="app.js?8394573"></script>
 </body>
 </html>
