--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
                 </div>
             </div>
         </div>
+        <div class="position-fixed bottom-0 end-0">
+            <a href="#" @click.prevent="window.scroll(0, 0)" class="btn" title="Go to top">⏫</a>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="app.js?8394573"></script>
