--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                 <input type="text" x-model="item.name" class="form-control form-control-sm border-info-subtle" placeholder="Name" @keyup="saveList" required pattern="[A-Za-z0-9]{1,}">
                             </div>
                             <div class="mb-1">
-                                <div class="border border-primary-subtle p-1 rounded pointer" @click="showDropdown(item, dropdownItemTypes)" tabindex="0">
+                                <div class="border border-primary-subtle p-1 rounded pointer" @click="showDropdown(item, dropdownItemTypes)" @keydown.space.prevent="showDropdown(item, dropdownItemTypes)" tabindex="0">
                                     <template x-if="item.itemType.length <= 0">
                                         <span>Choose one or multiple item type</span>
                                     </template>
@@ -143,7 +143,7 @@
                             <template x-for="(affix, affixKey) in item.affixPools" :key="affix.id">
                                 <div class="mb-1">
                                     <div class="input-group input-group-sm">
-                                        <span data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @click.prevent="showDropdown(affix, dropdownAffix)" tabindex="0"></span>
+                                        <span data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @click.prevent="showDropdown(affix, dropdownAffix)" @keydown.space.prevent="showDropdown(affix, dropdownAffix)" tabindex="0"></span>
                                         <input type="number" class="form-control form-control-sm border-warning-subtle" x-model="affix.value" @keyup="saveList" placeholder="Value">
                                         <button type="button" class="btn btn-sm btn-outline-secondary border-warning-subtle" @click="removeAffix(key, affixKey, 'affixes')">⛔</button>
                                     </div>
@@ -180,7 +180,7 @@
                             <div class="border border-primary-subtle p-2 rounded h-100">
                                 <div class="mb-1">
                                     <div class="input-group">
-                                        <span tabindex="0" :title="aspects[item.aspect]?.desc ?? 'Choose an aspect'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.aspect ? item.aspect : 'Choose an aspect'" @click="showDropdown(item, dropdownAspects)"></span>
+                                        <span tabindex="0" :title="aspects[item.aspect]?.desc ?? 'Choose an aspect'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.aspect ? item.aspect : 'Choose an aspect'" @click="showDropdown(item, dropdownAspects)" @keydown.space.prevent="showDropdown(item, dropdownAspects)"></span>
                                         <input type="number" x-model="item.value" class="form-control form-control-sm border-info-subtle" placeholder="Value" @change="saveList()" />
                                         <button class="btn border-info-subtle btn-sm" type="button" @click="removeAspect(key)">⛔</button>
                                     </div>
@@ -208,26 +208,26 @@
                 <div class="col-xl-4 col-md-6">
                     <div class="border border-primary-subtle p-2 rounded h-100">
                         <div class="mb-1 input-group">
-                            <span :title="uniques[item.unique]?.desc ?? 'Choose a unique'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.unique ? item.unique : 'Choose a unique'" @click="showDropdown(item, dropdownUniques)"></span>
+                            <span tabindex="0" :title="uniques[item.unique]?.desc ?? 'Choose a unique'" data-dropdown-close="true" class="text-start input-group-text affix-value border-info-subtle" x-text="item.unique ? item.unique : 'Choose a unique'" @click="showDropdown(item, dropdownUniques)" @keydown.space.prevent="showDropdown(item, dropdownUniques)"></span>
                             <input type="number" x-model="item.value" class="form-control form-control-sm border-info-subtle" placeholder="Value" @change="saveList()" />
                         </div>
                         <div class="mb-1">
                             <input type="number" class="form-control form-control-sm border-info-subtle" x-model="item.minPower" placeholder="Min Power" @change="saveList">
                         </div>
+                        <div class="text-end mb-1">
+                            <button class="btn btn-info btn-sm" @click="addAffix(key, 'uniques')">Add Affix</button>
+                        </div>
                         <template x-for="(affix, affixKey) in item.affixPools" :key="affix.id">
 
                             <div class="input-group input-group-sm mb-1">
-                                <span tabindex="0" data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @click="showDropdown(affix, dropdownAffix)"></span>
+                                <span tabindex="0" data-dropdown-close="true" :title="affixes[affix.affix] ?? ''" class="text-start input-group-text affix-value border-warning-subtle" x-text="affixes[affix.affix] ?? 'Choose an affix'" @keydown.space.prevent="showDropdown(affix, dropdownAffix)" @click="showDropdown(affix, dropdownAffix)"></span>
                                 <input type="number" class="form-control form-control-sm border-warning-subtle" x-model="affix.value" @keyup="saveList" placeholder="Value">
                                 <button type="button" class="btn btn-sm btn-outline-secondary border-warning-subtle" @click="removeAffix(key, affixKey, 'uniques')">⛔</button>
                             </div>
 
                         </template>
-                        <div class="text-end mb-1">
-                            <button class="btn btn-info btn-sm" @click="addAffix(key, 'uniques')">Add Affix</button>
-                        </div>
 
-                        <div class="mb-1">
+                        <div class="mb-2 mt-2">
                             <button class="btn btn-info btn-danger btn-sm" @click="removeItem(key, 'uniques')">
                                 Remove
                             </button>
